# plugin-companion-for-soundtrack-by-twitch

./: .gitmodules  CMakeLists.txt  azure-pipelines.yml
CI/: install-windows.cmd  package-windows.cmd
soundtrack/: CMakeLists.txt
soundtrack/src/: SoundtrackPlugin.cpp  SoundtrackSource.cpp
